--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: wordpress-appflex
+  name: wordpress-appflex-v1
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: wordpress-appflex
+      app: wordpress-appflex-v1
   template:
     metadata:
       labels:
-        app: wordpress-appflex
+        app: wordpress-appflex-v1
     spec:
       containers:
       - name: wordpress
@@ -42,13 +42,68 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: wordpress-appflex
+  name: wordpress-appflex-v1
 spec:
   type: ClusterIP
   ports:
     - port: 80
   selector:
-    app: wordpress-appflex
+    app: wordpress-appflex-v1
+
+
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: wordpress-appflex-v2
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: wordpress-appflex-v2
+  template:
+    metadata:
+      labels:
+        app: wordpress-appflex-v2
+    spec:
+      containers:
+      - name: wordpress
+        image: global-registry.virtapp.io/library/apache-appflex:0.9
+        resources:
+            requests:
+              memory: "1Gi"
+              cpu: 1
+            limits:
+              cpu: 2
+              memory: "2Gi"
+        ports:
+        - containerPort: 80
+        env:
+            - name: WORDPRESS_DB_HOST
+              value: mysql
+            - name: WORDPRESS_DB_NAME
+              value: appflex
+            - name: WORDPRESS_DB_USER
+              value: root
+            - name: WORDPRESS_DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-pass
+                  key: password         
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: wordpress-appflex-v2
+spec:
+  type: ClusterIP
+  ports:
+    - port: 80
+  selector:
+    app: wordpress-appflex-v2
 
 
 ---
@@ -57,11 +112,11 @@ apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
  namespace: default
- name: wordpress-appflex
+ name: wordpress-appflex-v1
 spec:
  scaleTargetRef:
    kind:          Deployment
-   name:          wordpress-appflex
+   name:          wordpress-appflex-v1
  pollingInterval: 20
  minReplicaCount: 1
  maxReplicaCount: 6
@@ -73,5 +128,25 @@ spec:
       end: 0 23 * * *
       desiredReplicas: "3"
       
-      
+---
+
+apiVersion: keda.sh/v1alpha1
+kind: ScaledObject
+metadata:
+ namespace: default
+ name: wordpress-appflex-v2
+spec:
+ scaleTargetRef:
+   kind:          Deployment
+   name:          wordpress-appflex-v2
+ pollingInterval: 20
+ minReplicaCount: 1
+ maxReplicaCount: 6
+ triggers:
+  - type: cron
+    metadata:
+      timezone: Asia/Jerusalem
+      start: 0 8 * * *
+      end: 0 23 * * *
+      desiredReplicas: "3"
       
