--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -64,6 +64,12 @@ spec:
  pollingInterval: 20
  minReplicaCount: 2
  maxReplicaCount: 8
+ advanced:
+    restoreToOriginalReplicaCount: true
+    horizontalPodAutoscalerConfig:
+      behavior:
+        scaleDown:
+          stabilizationWindowSeconds: 300
  triggers:
   - type: cron
     metadata:
