--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -58,12 +58,20 @@ metadata:
  namespace: default
  name: wordpress-appflex
 spec:
- scaleTargetRef:
-   kind:          Deployment
-   name:          wordpress-appflex
- pollingInterval: 20
- minReplicaCount: 1
- maxReplicaCount: 8
+  scaleTargetRef:
+    apiVersion:    apps/v1                           # Optional. Default: apps/v1
+    kind:          deployment                        # Optional. Default: Deployment
+    name:          wordpress-appflex}                # Mandatory. Must be in the same namespace as the ScaledObject
+
+  pollingInterval:  30                               # Optional. Default: 30 seconds
+  cooldownPeriod:   300                              # Optional. Default: 300 seconds
+  idleReplicaCount: 0                                # Optional. Default: ignored, must be less than minReplicaCount 
+  minReplicaCount:  1                                # Optional. Default: 0
+  maxReplicaCount:  100                              # Optional. Default: 100
+  fallback:                                          # Optional. Section to specify fallback options
+    failureThreshold: 3                              # Mandatory if fallback section is included
+    replicas: 6 
+ 
  triggers:
   - type: cron
     metadata:
