--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -61,7 +61,7 @@ spec:
   scaleTargetRef:
     apiVersion:    apps/v1                           # Optional. Default: apps/v1
     kind:          deployment                        # Optional. Default: Deployment
-    name:          wordpress-appflex}                # Mandatory. Must be in the same namespace as the ScaledObject
+    name:          wordpress-appflex                 # Mandatory. Must be in the same namespace as the ScaledObject
 
   pollingInterval:  30                               # Optional. Default: 30 seconds
   cooldownPeriod:   300                              # Optional. Default: 300 seconds
