--- a/virtapp/deployment.yaml
+++ b/virtapp/deployment.yaml
@@ -57,18 +57,22 @@ apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
  namespace: default
- name: wordpress-virtapp
+ name: wordpress-appflex
 spec:
   scaleTargetRef:
     apiVersion:    apps/v1                           # Optional. Default: apps/v1
     kind:          Deployment                        # Optional. Default: Deployment
-    name:          wordpress-virtapp                 # Mandatory. Must be in the same namespace as the ScaledObject
+    name:          wordpress-appflex                 # Mandatory. Must be in the same namespace as the ScaledObject
   pollingInterval:  30                               # Optional. Default: 30 seconds
   cooldownPeriod:   300                              # Optional. Default: 300 seconds
   idleReplicaCount: 0                                # Optional. Default: ignored, must be less than minReplicaCount 
   minReplicaCount:  1                                # Optional. Default: 0
   maxReplicaCount:  10                               # Optional. Default: 100
-  triggers:
+  fallback:                                          # Optional. Section to specify fallback options
+    failureThreshold: 3                              # Mandatory if fallback section is included
+    replicas: 6 
+ 
+ triggers:
   - type: cron
     metadata:
       timezone: Asia/Jerusalem
