--- a/virtapp/deployment.yaml
+++ b/virtapp/deployment.yaml
@@ -57,12 +57,12 @@ apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
  namespace: default
- name: wordpress-appflex
+ name: wordpress-virtapp
 spec:
   scaleTargetRef:
     apiVersion:    apps/v1                           # Optional. Default: apps/v1
     kind:          Deployment                        # Optional. Default: Deployment
-    name:          wordpress-appflex                 # Mandatory. Must be in the same namespace as the ScaledObject
+    name:          wordpress-virtapp                 # Mandatory. Must be in the same namespace as the ScaledObject
   pollingInterval:  30                               # Optional. Default: 30 seconds
   cooldownPeriod:   300                              # Optional. Default: 300 seconds
   minReplicaCount:  1                                # Optional. Default: 0
