--- a/virtapp/deployment.yaml
+++ b/virtapp/deployment.yaml
@@ -52,21 +52,29 @@ spec:
     app: wordpress-virtapp
     
 ---
-
 apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
  namespace: default
  name: wordpress-virtapp
 spec:
-  scaleTargetRef:
-    apiVersion:    apps/v1                           # Optional. Default: apps/v1
-    kind:          Deployment                        # Optional. Default: Deployment
-    name:          wordpress-virtapp                 # Mandatory. Must be in the same namespace as the ScaledObject
-  pollingInterval:  30                               # Optional. Default: 30 seconds
-  cooldownPeriod:   300                              # Optional. Default: 300 seconds
-  minReplicaCount:  1                                # Optional. Default: 0
-  maxReplicaCount:  10                               # Optional. Default: 100
+ scaleTargetRef:
+   apiVersion:    apps/v1 
+   kind:          Deployment
+   name:          wordpress-virtapp
+ pollingInterval: 20
+ minReplicaCount: 1
+ maxReplicaCount: 10
+ advanced:
+   restoreToOriginalReplicaCount: false
+   horizontalPodAutoscalerConfig:
+     behavior:
+       scaleDown:
+         stabilizationWindowSeconds: 300
+         policies:
+         - type: Percent
+           value: 25
+           periodSeconds: 60
  triggers:
   - type: cron
     metadata:
