--- a/apache/apache.yaml
+++ b/apache/apache.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: apache-v1
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: apache-v1
@@ -34,6 +34,50 @@ metadata:
 spec:
   selector:
     app: apache-v1
+  type: ClusterIP
+  ports:
+    - name: http-port
+      port: 8080
+      targetPort: 80
+
+---
+
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: apache-v2
+  labels:
+    app: apache-v2
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: apache-v2
+  template:
+    metadata:
+      labels:
+        app: apache-v2
+    spec:
+      containers:
+      - name: apache
+        image: global-registry.virtapp.io/library/apache-default:0.1
+        ports:
+          - name: http-port
+            containerPort: 80
+      restartPolicy: Always
+      nodeSelector: {}
+        
+
+---
+
+kind: Service
+apiVersion: v1
+metadata:
+  name: apache-v2
+spec:
+  selector:
+    app: apache-v2
   type: ClusterIP
   ports:
     - name: http-port
