--- a/virtapp/deployment.yaml
+++ b/virtapp/deployment.yaml
@@ -15,7 +15,8 @@ spec:
     spec:
       containers:
       - name: wordpress
-        image: global-registry.virtapp.io/library/apache-php:7.2
+        image: virtapp/wordpress-virtapp:0.8
+        #image: global-registry.virtapp.io/library/apache-php:7.2
         resources:
             requests:
               memory: "1Gi"
