--- a/virtapp/deployment.yaml
+++ b/virtapp/deployment.yaml
@@ -55,6 +55,42 @@ spec:
   
   
 ---
+
+
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: ingress-route-virtapp
+  namespace: default
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/affinity: "cookie"
+    nginx.ingress.kubernetes.io/session-cookie-name: "session-route"
+    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
+    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
+    #nginx.ingress.kubernetes.io/affinity-mode: persistent
+    #nginx.ingress.kubernetes.io/session-cookie-hash: sha1
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300s"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "300s"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "300s"
+    nginx.ingress.kubernetes.io/send-timeout: "300"
+    nginx.ingress.kubernetes.io/client-body-buffer-size: "5m"
+    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
+spec:
+  tls:
+  - secretName: virtapp
+  rules:
+
+  - host: virtapp.io
+    http:
+      paths:
+      - backend:
+          serviceName: wordpress-virtapp
+          servicePort: 80
+          
+          
+---
+
 apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
