--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: wordpress
-        image: global-registry.virtapp.io/library/apache-appflex:0.9
+        image: virtapp/wordpress-appflex:0.2
         resources:
             requests:
               memory: "1Gi"
@@ -26,7 +26,7 @@ spec:
         - containerPort: 80
         env:
             - name: WORDPRESS_DB_HOST
-              value: mysql
+              value: mariadb-mariadb-galera
             - name: WORDPRESS_DB_NAME
               value: appflex
             - name: WORDPRESS_DB_USER
