--- a/apache/deployment.yaml
+++ b/apache/deployment.yaml
@@ -17,8 +17,8 @@ spec:
     spec:
       containers:
       - name: apache
-        #image: global-registry.virtapp.io/library/apache-default:0.1
-        image: virtapp/apache:0.3
+        image: global-registry.virtapp.io/library/apache-default:0.2
+        #image: virtapp/apache:0.3
         ports:
           - name: http-port
             containerPort: 80
