--- a/virtapp/deployment.yaml
+++ b/virtapp/deployment.yaml
@@ -63,8 +63,8 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/affinity: cookie
-    nginx.ingress.kubernetes.io/cors-allow-headers: X-Forwarded-For
-    nginx.ingress.kubernetes.io/http2-push-preload: "true"
+    #nginx.ingress.kubernetes.io/cors-allow-headers: X-Forwarded-For
+    #nginx.ingress.kubernetes.io/http2-push-preload: "true"
     nginx.ingress.kubernetes.io/modsecurity-transaction-id: "$request_id"
     nginx.ingress.kubernetes.io/ssl-ciphers: "ALL:!aNULL:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP"
     nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
@@ -110,8 +110,7 @@ spec:
       - backend:
           serviceName: wordpress-virtapp
           servicePort: 80
-          
-          
+                    
 ---
 
 apiVersion: keda.sh/v1alpha1
