--- a/virtapp/deployment.yaml
+++ b/virtapp/deployment.yaml
@@ -66,6 +66,7 @@ metadata:
   namespace: default
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    mesh.traefik.io/traffic-type: "http"
     nginx.ingress.kubernetes.io/affinity: "cookie"
     nginx.ingress.kubernetes.io/session-cookie-name: "route-virtapp"
     nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
