--- a/virtapp/deployment.yaml
+++ b/virtapp/deployment.yaml
@@ -66,7 +66,6 @@ metadata:
   namespace: default
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    mesh.traefik.io/traffic-type: "http"
     nginx.ingress.kubernetes.io/affinity: "cookie"
     nginx.ingress.kubernetes.io/session-cookie-name: "route-virtapp"
     nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
@@ -79,7 +78,7 @@ metadata:
       add_header Cache-Control "max-age=0, no-cache, no-store, must-revalidate";
       add_header X-Frame-Options SAMEORIGIN;
       add_header Strict-Transport-Security "max-age=31536000;includeSubdomains; preload";
-      more_set_headers "server-tokens: GSLB Technologies"
+      more_set_headers "server-tokens: Virtapp Technologies"
       more_clear_headers "Server";
       more_set_headers "X-Frame-Options: Deny";
       more_set_headers "X-Xss-Protection: 1; mode=block";
