--- a/httpd/deployment.yaml
+++ b/httpd/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: httpd-server
-        image: virtapp/apache:0.3
+        image: virtapp/apache:7f6c4bf4-3-6
         ports:
           - name: http-port
             containerPort: 80
