--- a/httpd/deployment.yaml
+++ b/httpd/deployment.yaml
@@ -17,7 +17,8 @@ spec:
     spec:
       containers:
       - name: httpd-server
-        image: virtapp/apache:7f6c4bf4-3-6
+        #image: virtapp/apache:7f6c4bf4-3-6
+        image: virtapp/wordpress-virtapp:0.15
         ports:
           - name: http-port
             containerPort: 80
