--- a/local/deployment.yaml
+++ b/local/deployment.yaml
@@ -16,7 +16,6 @@ spec:
       containers:
       - name: wordpress
         image: virtapp/wordpress-virtapp:0.15
-        #image: global-registry.virtapp.io/library/apache-php:7.2
         resources:
             requests:
               memory: "1Gi"
@@ -28,7 +27,7 @@ spec:
         - containerPort: 80
         env:
             - name: WORDPRESS_DB_HOST
-              value: mariadb-mariadb-galera
+              value: mariadb-galera
             - name: WORDPRESS_DB_NAME
               value: virtapp_io
             - name: WORDPRESS_DB_USER
@@ -96,35 +95,3 @@ spec:
           serviceName: wordpress-virtapp
           servicePort: 80
                     
----
-
-apiVersion: keda.sh/v1alpha1
-kind: ScaledObject
-metadata:
- namespace: default
- name: wordpress-virtapp
-spec:
- scaleTargetRef:
-   apiVersion:    apps/v1 
-   kind:          Deployment
-   name:          wordpress-virtapp
- pollingInterval: 20
- minReplicaCount: 2
- maxReplicaCount: 10
- advanced:
-   restoreToOriginalReplicaCount: false
-   horizontalPodAutoscalerConfig:
-     behavior:
-       scaleDown:
-         stabilizationWindowSeconds: 300
-         policies:
-         - type: Percent
-           value: 25
-           periodSeconds: 60
- triggers:
-  - type: cron
-    metadata:
-      timezone: Asia/Jerusalem
-      start: 0 7 * * *
-      end: 0 23 * * *
-      desiredReplicas: "4"
