--- a/local/deployment.yaml
+++ b/local/deployment.yaml
@@ -2,16 +2,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: wordpress-virtapp
+  name: wordpress-local
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: wordpress-virtapp
+      app: wordpress-local
   template:
     metadata:
       labels:
-        app: wordpress-virtapp
+        app: wordpress-local
     spec:
       containers:
       - name: wordpress
@@ -47,13 +47,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: wordpress-virtapp
+  name: wordpress-local
 spec:
   type: ClusterIP
   ports:
     - port: 80
   selector:
-    app: wordpress-virtapp
+    app: wordpress-local
   
 
 ---
@@ -61,7 +61,7 @@ spec:
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: ingress-route-virtapp
+  name: ingress-route-local
   namespace: default
   annotations:
     kubernetes.io/ingress.class: "nginx"
@@ -92,6 +92,6 @@ spec:
     http:
       paths:
       - backend:
-          serviceName: wordpress-virtapp
+          serviceName: wordpress-local
           servicePort: 80
                     
