--- a/local/secret.yaml
+++ b/local/secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: mysql-password
 type: opaque
 stringData:
-  MYSQL_ROOT_PASSWORD: YWRtaW4=
+  MYSQL_ROOT_PASSWORD: cTF3MmUzcjQxMDBA
