--- a/local/secret.yaml
+++ b/local/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysql-password
+  name: mysql-pass
 type: opaque
 stringData:
   MYSQL_ROOT_PASSWORD: cTF3MmUzcjQxMDBA
