--- a/local/secret.yaml
+++ b/local/secret.yaml
@@ -5,3 +5,15 @@ metadata:
 type: opaque
 stringData:
   MYSQL_ROOT_PASSWORD: ZnVrbzA5cGhzdXJ4aG8=
+  
+---
+
+apiVersion: v1
+kind: Secret
+metadata:
+  name: mysql-password
+type: opaque
+stringData:
+  MYSQL_ROOT_PASSWORD: ZnVrbzA5cGhzdXJ4aG8=
+  
+
