--- a/apache-default/deployment.yaml
+++ b/apache-default/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: httpd-server
-        image: virtapp/apache:7f6c4bf4-3-6
+        image: virtapp/apache-default:0.2
         ports:
           - name: http-port
             containerPort: 80
