--- a/appflex/deployment.yaml
+++ b/appflex/deployment.yaml
@@ -60,19 +60,23 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/affinity: "cookie"
-    nginx.ingress.kubernetes.io/session-cookie-name: "session-route"
+    nginx.ingress.kubernetes.io/session-cookie-name: "route-appflex"
     nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
     nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
-    #nginx.ingress.kubernetes.io/canary: "true"
-    #nginx.ingress.kubernetes.io/canary-weight: "60"
-    #nginx.ingress.kubernetes.io/affinity-mode: persistent
-    #nginx.ingress.kubernetes.io/session-cookie-hash: sha1
-    #nginx.ingress.kubernetes.io/proxy-connect-timeout: "300s"
-    #nginx.ingress.kubernetes.io/proxy-send-timeout: "300s"
-    #nginx.ingress.kubernetes.io/proxy-read-timeout: "300s"
-    #nginx.ingress.kubernetes.io/send-timeout: "300"
-    #nginx.ingress.kubernetes.io/client-body-buffer-size: "5m"
-    #nginx.ingress.kubernetes.io/proxy-body-size: "5m"
+    nginx.ingress.kubernetes.io/server-snippet: |
+      expires 1M;
+      add_header Cache-Control "public";
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      proxy_set_header X-Client-Cert $ssl_client_fingerprint;
+      add_header Cache-Control "max-age=0, no-cache, no-store, must-revalidate";
+      add_header X-Frame-Options SAMEORIGIN;
+      add_header Strict-Transport-Security "max-age=31536000;includeSubdomains; preload";
+      more_set_headers "server-tokens: Virtapp Technologies"
+      more_clear_headers "Server";
+      more_set_headers "X-Frame-Options: Deny";
+      more_set_headers "X-Xss-Protection: 1; mode=block";
+      more_set_headers "X-Content-Type-Options: nosniff";
+    nginx.ingress.kubernetes.io/enable-access-log: "false"
 spec:
   tls:
   - secretName: appflex
@@ -116,4 +120,4 @@ spec:
       timezone: Asia/Jerusalem
       start: 0 8 * * *
       end: 0 23 * * *
-      desiredReplicas: "3"
+      desiredReplicas: "4"
