--- a/virtapp/deployment.yaml
+++ b/virtapp/deployment.yaml
@@ -18,11 +18,11 @@ spec:
         image: virtapp/wordpress-virtapp:0.23
         resources:
             requests:
-              memory: "1Gi"
+              memory: "500Mi"
               cpu: 1
             limits:
-              cpu: 2
-              memory: "2Gi"
+              cpu: 1
+              memory: "1Gi"
         ports:
         - containerPort: 80
         env:
